<resources>
    <string name="app_name">SecondProject</string>
    <string name="play">JUGAR!</string>
    <string name="user">Nombre de Usuario</string>
    <string name="login">INGRESAR AL QUIZZ</string>
    <string name="select">ELIGE TU QUIZZ</string>
    <string name="button_select">PULSA AQUI \nELIGE TU QUIZZ</string>
    <string name="reset_quizz">Reset Quizz</string>
    <string name="go_quizz">GO QUIZZ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pregunta">Pregunta:</string>
    <string name="enviar_respuestas">Enviar Respuestas</string>
    <string name="volver_al_menu_principal">Volver al menu principal</string>
</resources>