<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/selcect_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".selectquiz">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/select_background" />

    <RelativeLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/select_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:text="@string/select"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/selectimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/clickbutton" />

        <ImageView
            android:id="@+id/animation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scaleType="center"
            app:srcCompat="@drawable/transparent" />

        <Button
            android:id="@+id/go_quizz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="15dp"
            android:backgroundTint="#2878ff"
            android:onClick="goquizz"
            android:text="@string/go_quizz"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/reset_quizz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="15dp"
            android:backgroundTint="#2878ff"
            android:onClick="callreset"
            android:text="@string/reset_quizz"
            tools:ignore="OnClick" />

    </RelativeLayout>
</RelativeLayout>