<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/framecontainerq5"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditTextFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:id="@+id/checkboxfragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/derportes_background"
            android:scaleType="centerCrop"
            />
        <TextView
            android:id="@+id/preguntacheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregunta"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:buttonTint="@color/black"
            android:layout_margin="20dp"/>

        <Button
            android:id="@+id/backmenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#4CAF50"
            android:padding="10dp"
            android:layout_below="@+id/preguntacheckbox"
            android:layout_centerHorizontal="true"
            android:text="@string/volver_al_menu_principal" />

        <ImageButton
            android:id="@+id/instagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/instagram"
            android:background="#00F81111"
            android:layout_below="@id/backmenu"
            android:layout_centerHorizontal="true" />




        <RelativeLayout
            android:id="@+id/answercontainer"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:background="@drawable/radioanswers"
            android:layout_centerInParent="true"
            android:layout_marginBottom="30dp">

            <EditText
                android:id="@+id/answertext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_centerInParent="true"
                android:padding="5dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/black"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:hint="Introduce Tu Respuesta" />


        </RelativeLayout>



        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#4CAF50"
            android:background="@drawable/send_answers"
            android:layout_below="@+id/answercontainer"
            android:layout_centerHorizontal="true"
            android:text="@string/enviar_respuestas" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/puntuacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@raw/puntuacion" />



    </RelativeLayout>



</FrameLayout>